--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ section{
 
 h1{
    font-size: 2.5rem; 
-   font-family: 'Rubik Dirt', cursive;
+   font-family: 'Pine Forest', cursive;
 }
 
 .seccion-oscura{
